# BitCalculations

./: Cargo.toml
src/: main.rs  utils.rs
