[package]
name = "BitCalculations"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.32.5"
secp256k1 = { version = "0.30.0", features = ["rand"] }
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.94"
hex = "0.4.3"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tiny-bip39 = "2.0.0"
futures = "0.3.31"
chrono = "0.4.39"
tiny-keccak = { version = "2.0.2", features = ["keccak"]}
sha2 = "0.10.8"
regex = "1.11.1"